Update sau khi test bởi tester

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             class="header__logo"
                         />
                     </a>
-                    <div class="header-nav">
+                    <nav class="header-nav">
                         <ul class="header__list">
                             <li class="header__item">
                                 <a
@@ -141,7 +141,7 @@
                             </li>
                         </ul>
                         <a href="#!" class="btn header__btn">Sign Up</a>
-                    </div>
+                    </nav>
                 </div>
             </div>
         </header>
@@ -150,9 +150,9 @@
             <div class="hero">
                 <div class="hero-body">
                     <section class="hero-content">
-                        <h2 class="section__heading hero__heading">
+                        <h1 class="section__heading hero__heading">
                             We’re a creative design agency.
-                        </h2>
+                        </h1>
                         <p class="section__desc hero__desc">
                             A brilliant, modular agency template for startup’s
                             build yours toady.
@@ -330,64 +330,64 @@
                             </div>
                         </div>
                     </div>
-                    <div class="services__content">
+                    <div class="services-content">
                         <ul class="services__list">
-                            <li class="services__item">
-                                <a href="#!" class="services__link">
+                            <li class="services__item-wrap">
+                                <a href="#!" class="services__item">
                                     <img
                                         src="./assets/image/services-1.png"
                                         alt=""
                                         class="services__img"
                                     />
+                                    <div class="services__item-info">
+                                        <h3 class="services__item-heading">
+                                            Branding
+                                        </h3>
+                                        <p class="services__item-desc">
+                                            Create beautiful Agency website with
+                                            Boluethat converts more visitors
+                                            than any website.
+                                        </p>
+                                    </div>
                                 </a>
-                                <div class="services__item-info">
-                                    <h3 class="services__item-heading">
-                                        Branding
-                                    </h3>
-                                    <p class="services__item-desc">
-                                        Create beautiful Agency website with
-                                        Boluethat converts more visitors than
-                                        any website.
-                                    </p>
-                                </div>
                             </li>
-                            <li class="services__item">
-                                <a href="#!" class="services__link">
+                            <li class="services__item-wrap">
+                                <a href="#!" class="services__item">
                                     <img
                                         src="./assets/image/services-2.png"
                                         alt=""
                                         class="services__img"
                                     />
+                                    <div class="services__item-info">
+                                        <h3 class="services__item-heading">
+                                            Web Design
+                                        </h3>
+                                        <p class="services__item-desc">
+                                            Create beautiful Agency website with
+                                            Boluethat converts more visitors
+                                            than any website.
+                                        </p>
+                                    </div>
                                 </a>
-                                <div class="services__item-info">
-                                    <h3 class="services__item-heading">
-                                        Web Design
-                                    </h3>
-                                    <p class="services__item-desc">
-                                        Create beautiful Agency website with
-                                        Boluethat converts more visitors than
-                                        any website.
-                                    </p>
-                                </div>
                             </li>
-                            <li class="services__item">
-                                <a href="#!" class="services__link">
+                            <li class="services__item-wrap">
+                                <a href="#!" class="services__item">
                                     <img
                                         src="./assets/image/services-3.png"
                                         alt=""
                                         class="services__img"
                                     />
+                                    <div class="services__item-info">
+                                        <h3 class="services__item-heading">
+                                            Graphic Design
+                                        </h3>
+                                        <p class="services__item-desc">
+                                            Create beautiful Agency website with
+                                            Boluethat converts more visitors
+                                            than any website.
+                                        </p>
+                                    </div>
                                 </a>
-                                <div class="services__item-info">
-                                    <h3 class="services__item-heading">
-                                        Graphic Design
-                                    </h3>
-                                    <p class="services__item-desc">
-                                        Create beautiful Agency website with
-                                        Boluethat converts more visitors than
-                                        any website.
-                                    </p>
-                                </div>
                             </li>
                         </ul>
                     </div>
@@ -670,65 +670,65 @@
                         </div>
                     </div>
                     <!-- Blog list -->
-                    <div class="blog-list">
-                        <div class="blog-item">
-                            <a href="#!" class="blog-item__link">
+                    <ul class="blog-list">
+                        <li class="blog-item__wrap">
+                            <a href="#!" class="blog-item">
                                 <img
                                     src="./assets/image/blog-1.jpg"
                                     alt=""
                                     class="blog-item__img"
                                 />
+                                <div class="blog-content">
+                                    <span class="blog-item__label">STORY</span>
+                                    <h3 class="blog-item__heading">
+                                        What did we learn from nunning over 100
+                                        design sprints in less the year?
+                                    </h3>
+                                    <span class="blog-item__date"
+                                        >JANUARY 29, 2022</span
+                                    >
+                                </div>
                             </a>
-                            <div class="blog-content">
-                                <span class="blog-item__label">STORY</span>
-                                <h3 class="blog-item__heading">
-                                    What did we learn from nunning over 100
-                                    design sprints in less the year?
-                                </h3>
-                                <span class="blog-item__date"
-                                    >JANUARY 29, 2022</span
-                                >
-                            </div>
-                        </div>
-                        <div class="blog-item">
-                            <a href="#!" class="blog-item__link">
+                        </li>
+                        <li class="blog-item__wrap">
+                            <a href="#!" class="blog-item">
                                 <img
                                     src="./assets/image/blog-2.jpg"
                                     alt=""
                                     class="blog-item__img"
                                 />
+                                <div class="blog-content">
+                                    <span class="blog-item__label">STORY</span>
+                                    <h3 class="blog-item__heading">
+                                        The difference between the UI/UX design
+                                        a simple guide for beginner’s
+                                    </h3>
+                                    <span class="blog-item__date"
+                                        >JANUARY 29, 2022</span
+                                    >
+                                </div>
                             </a>
-                            <div class="blog-content">
-                                <span class="blog-item__label">STORY</span>
-                                <h3 class="blog-item__heading">
-                                    The difference between the UI/UX design a
-                                    simple guide for beginner’s
-                                </h3>
-                                <span class="blog-item__date"
-                                    >JANUARY 29, 2022</span
-                                >
-                            </div>
-                        </div>
-                        <div class="blog-item">
-                            <a href="#!" class="blog-item__link">
+                        </li>
+                        <li class="blog-item__wrap">
+                            <a href="#!" class="blog-item">
                                 <img
                                     src="./assets/image/blog-3.jpg"
                                     alt=""
                                     class="blog-item__img"
                                 />
+                                <div class="blog-content">
+                                    <span class="blog-item__label">STORY</span>
+                                    <h3 class="blog-item__heading">
+                                        How marketing can help your business
+                                        more than anything.
+                                    </h3>
+                                    <span class="blog-item__date"
+                                        >JANUARY 29, 2022</span
+                                    >
+                                </div>
                             </a>
-                            <div class="blog-content">
-                                <span class="blog-item__label">STORY</span>
-                                <h3 class="blog-item__heading">
-                                    How marketing can help your business more
-                                    than anything.
-                                </h3>
-                                <span class="blog-item__date"
-                                    >JANUARY 29, 2022</span
-                                >
-                            </div>
-                        </div>
-                    </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -755,57 +755,63 @@
                             />
                         </a>
                     </div>
-                    <ul class="footer-social">
-                        <a href="#!" class="footer-social__link">
-                            <i
-                                class="footer-social__icon fa-brands fa-facebook-f"
-                            ></i>
-                        </a>
-                        <a href="#!" class="footer-social__link">
-                            <i
-                                class="fa-brands fa-instagram footer-social__icon"
-                            ></i>
-                        </a>
-                        <a href="#!" class="footer-social__link">
-                            <i
-                                class="fa-brands fa-square-twitter footer-social__icon"
-                            ></i>
-                        </a>
+                    <ul class="footer-social__list">
+                        <li class="footer-social__item">
+                            <a href="#!" class="footer-social__link">
+                                <i
+                                    class="footer-social__icon fa-brands fa-facebook-f"
+                                ></i>
+                            </a>
+                        </li>
+                        <li class="footer-social__item">
+                            <a href="#!" class="footer-social__link">
+                                <i
+                                    class="fa-brands fa-instagram footer-social__icon"
+                                ></i>
+                            </a>
+                        </li>
+                        <li class="footer-social__item">
+                            <a href="#!" class="footer-social__link">
+                                <i
+                                    class="fa-brands fa-square-twitter footer-social__icon"
+                                ></i>
+                            </a>
+                        </li>
                     </ul>
                 </div>
 
                 <!-- Footer list -->
                 <div class="footer-info">
-                    <div class="footer-list">
-                        <div class="footer-item">
+                    <ul class="footer-list">
+                        <li class="footer-item">
                             <h3 class="footer-item__heading">Pages</h3>
                             <a href="#!" class="footer-item__link">Home</a>
                             <a href="#!" class="footer-item__link">About</a>
                             <a href="#!" class="footer-item__link">Blog</a>
                             <a href="#!" class="footer-item__link">Blog Post</a>
-                        </div>
-                        <div class="footer-item">
+                        </li>
+                        <li class="footer-item">
                             <h3 class="footer-item__heading">Product</h3>
                             <a href="#!" class="footer-item__link">Home</a>
                             <a href="#!" class="footer-item__link">About</a>
                             <a href="#!" class="footer-item__link">Blog</a>
                             <a href="#!" class="footer-item__link">Blog Post</a>
-                        </div>
-                        <div class="footer-item">
+                        </li>
+                        <li class="footer-item">
                             <h3 class="footer-item__heading">Overview</h3>
                             <a href="#!" class="footer-item__link">Home1</a>
                             <a href="#!" class="footer-item__link">Home2</a>
                             <a href="#!" class="footer-item__link">Home3</a>
                             <a href="#!" class="footer-item__link">Pricing1</a>
-                        </div>
-                        <div class="footer-item">
+                        </li>
+                        <li class="footer-item">
                             <h3 class="footer-item__heading">About us</h3>
                             <a href="#!" class="footer-item__link">Team</a>
                             <a href="#!" class="footer-item__link">Investors</a>
                             <a href="#!" class="footer-item__link">Blog</a>
                             <a href="#!" class="footer-item__link">Press</a>
-                        </div>
-                    </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
             <div class="coppyright">
