Chỉnh sửa form email ở footer

--- a/index.html
+++ b/index.html
@@ -739,13 +739,14 @@
                 <!-- Footer left -->
                 <div class="footer-left">
                     <h2 class="footer__heading">Sign up for our newsletter</h2>
-                    <div class="footer-form">
+                    <form class="footer-form">
                         <input
+                            autocomplete="off"
                             class="footer__input"
                             placeholder="Enter your email"
                             type="email"
-                            id="email"
-                            name="email"
+                            id=""
+                            name=""
                         />
                         <a href="#!" class="footer__act">
                             <img
@@ -754,7 +755,7 @@
                                 class="footer__btn"
                             />
                         </a>
-                    </div>
+                    </form>
                     <ul class="footer-social__list">
                         <li class="footer-social__item">
                             <a href="#!" class="footer-social__link">
